--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: rgb(67, 71, 75);
+    background-color: rgb(30, 35, 39);
+    font-family: "Work Sans", sans-serif;
 }
 
 header{
@@ -7,11 +8,11 @@ header{
     border-radius: 10px;
     display: flex;
     width: 1900px;
+    position: fixed;
 }
 
 svg{
-    color: rgb(34, 53, 83);
-    margin-top: 18px;
+    color: rgb(196, 202, 211);
     display: inline-block;
     padding: 20px;
     border-radius: 5px;
@@ -20,4 +21,30 @@ svg{
 
 svg:hover{
 transform: translateY(-10px)
+}
+
+ul{
+    display: flex;
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; 
+    margin-left: 500px;
+    padding-top: 45px;
+    font-size: 20px;
+}
+
+li{
+    margin-right: 40px;
+}
+
+a{
+    text-decoration: none;
+    color:aliceblue;
+    display: inline-block;
+    transition: transform 0.3s ease-in-out;
+}
+
+a:hover{
+    transform: translateY(-2px);
+    color: black;
 }
