--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(30, 35, 39);
     font-family: "Work Sans", sans-serif;
+    color: aliceblue;
 }
 
 header{
@@ -9,6 +10,9 @@ header{
     display: flex;
     width: 1900px;
     position: fixed;
+    margin-left: 10px;
+    top: 10px; 
+    left: 0; 
 }
 
 svg{
@@ -16,11 +20,12 @@ svg{
     display: inline-block;
     padding: 20px;
     border-radius: 5px;
-    transition: transform 0.2s ease-in-out;
+    transition: transform 0.1s ease-in-out;
 }
 
 svg:hover{
-transform: translateY(-10px)
+transform: translateY(-10px);
+color: rgb(128, 128, 128);
 }
 
 ul{
@@ -28,7 +33,7 @@ ul{
     list-style-type: none; 
     padding: 0; 
     margin: 0; 
-    margin-left: 500px;
+    margin-left: 480px;
     padding-top: 45px;
     font-size: 20px;
 }
@@ -44,7 +49,32 @@ a{
     transition: transform 0.3s ease-in-out;
 }
 
+main{
+    margin-top: 250px;
+}
+
 a:hover{
     transform: translateY(-2px);
     color: black;
+}
+
+.aboutgit {
+    background-color: rgb(196, 202, 211);
+    padding: 32px;
+    border-radius: 8px; 
+    max-width: 800px;
+    margin: 32px auto;
+    text-align: center;
+}
+
+.aboutgit_Z {
+    font-size: 32px;
+    color: #333;
+    margin-bottom: 16px;
+}
+
+.aboutgit_T {
+    font-size: 19.2px;
+    color: #6d6c6c;
+    line-height: 1.6;
 }
