--- a/style.css
+++ b/style.css
@@ -163,7 +163,6 @@ a:hover{
     text-align: center;
     margin-top: 280px;
     cursor: pointer;
-    transition: background-color 0.3s;
     background-color: transparent;
     border: 2px solid rgb(92, 108, 131);
     border-radius: 8px; 
@@ -191,6 +190,41 @@ a:hover{
 }
 
 .function.show .function_T {
+    max-height: 200px; /* Максимальная высота при показе */
+    opacity: 1; /* Полная прозрачность */
+}
+
+.projects{
+    background-color: rgb(196, 202, 211);
+    padding: 32px;
+    border-radius: 8px; 
+    text-align: left;
+    width: 10000px;
+    margin: 0;
+    text-align: center;
+    margin-top: 280px;
+    cursor: pointer;
+    border-radius: 8px; 
+    width: 1000px;
+    margin-left: 420px;
+}
+
+.projects_Z{
+    font-size: 32px;
+    text-align: center;
+    color: #333;
+}
+
+.projects_T{
+    max-height: 0; /* Скрываем текст по умолчанию */
+    overflow: hidden; /* Прячет переполнение */
+    opacity: 0; /* Начальная прозрачность */
+    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
+    color: #6d6c6c;
+    font-size: 19px;
+}
+
+.projects.show .projects_T {
     max-height: 200px; /* Максимальная высота при показе */
     opacity: 1; /* Полная прозрачность */
 }
