--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth; /* Плавный скроллинг */
+}
+
 
 body{
     background-color: rgb(30, 35, 39);
@@ -59,7 +63,11 @@ a:hover{
     color: black;
 }
 
-.aboutgithub {
+section{
+    scroll-margin-top: 200px;
+}
+
+#aboutgithub {
     background-color: rgb(196, 202, 211);
     padding: 32px;
     border-radius: 8px; 
@@ -80,7 +88,7 @@ a:hover{
     line-height: 1.6;
 }
 
-.aboutgit {
+#aboutgit {
     background-color: transparent;
     border: 2px solid rgb(92, 108, 131);
     padding: 32px;
@@ -101,6 +109,10 @@ a:hover{
     font-size: 19px;
     color: rgb(202, 201, 201);
     line-height: 1.6;
+}
+
+#differens{
+
 }
 
 .differens_Z{
@@ -158,7 +170,7 @@ a:hover{
     font-size: 19px;
 }
 
-.function{
+#function{
     margin: 0;
     text-align: center;
     margin-top: 280px;
@@ -194,7 +206,7 @@ a:hover{
     opacity: 1; /* Полная прозрачность */
 }
 
-.projects{
+#projects{
     background-color: rgb(196, 202, 211);
     padding: 32px;
     border-radius: 8px; 
@@ -234,7 +246,7 @@ a:hover{
     opacity: 1; /* Полная прозрачность */
 }
 
-.learn{
+#learn{
     text-align: center;
     margin-top: 320px;
     margin-right: 200px;
@@ -245,7 +257,7 @@ a:hover{
     margin-right: 820px;
 }
 
-.support{
+#support{
     text-align: center;
     margin-top: 100px;
     margin-right: 200px;
@@ -254,6 +266,10 @@ a:hover{
     border-radius: 8px; 
     width: 950px;
     margin-left: 900px;
+}
+
+.learn{
+    margin-left: 20px;
 }
 
 .learn_Z{
